Fix contrast issues

--- a/src/css/local.css
+++ b/src/css/local.css
@@ -106,7 +106,7 @@
     font-size: clamp(0.875rem, 1.5vw, 1rem);
     line-height: 1.5em;
     margin: 0 0 1rem;
-    color: #767676;
+    color: #4e4c4c;
   }
   #sbs .cs-name {
     font-size: 1rem;
